<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="all_accessibility">RIDE: The IoT Wave</string>
    <string name="all_description">Description</string>
    <string name="all_help">Help</string>
    <string name="all_icon">Icon</string>
    <string name="all_login">Login</string>
    <string name="all_name">Name</string>
    <string name="all_password">Password</string>
    <string name="all_signup">Sign Up</string>
    <string name="all_username">Username or Email</string>

    <string name="about_title">About</string>

    <string name="build_address">Address</string>
    <string name="build_configuration">Configuration</string>
    <string name="build_details">Details</string>
    <string name="build_generate">Generate</string>
    <string name="build_recipes">Recipes</string>
    <string name="build_title">Build App</string>

    <string name="editor_filter">Filter by Recipe</string>
    <string name="editor_title">Dynamic Editor</string>

    <string name="icon_accessibility">Use this icon and color</string>
    <string name="icon_image">Image</string>
    <string name="icon_color">Color</string>
    <string name="icon_preview">Preview</string>

    <string name="list_search">Search by Name</string>
    <string name="list_sort">Sort by Field</string>
    <string name="list_status">Status</string>
    <string name="list_toggle">Toggle Grid View</string>

    <string name="login_facebook">Login with Facebook</string>
    <string name="login_google">Login with Google</string>
    <string name="login_server">Login</string>
    <string name="login_twitter">Login with Twitter</string>
    <string name="login_title">Login</string>

    <string name="notifications_device">New Devices</string>
    <string name="notifications_filter">Filter by Type</string>
    <string name="notifications_search">Search by Keyword</string>
    <string name="notifications_status">Status Updates</string>
    <string name="notifications_suggestion">Suggestions</string>
    <string name="notifications_title">Notifications</string>

    <string name="recipes_title">Recipes</string>

    <string name="relationships_connection">Connection</string>
    <string name="relationships_title">Relationships</string>

    <string name="settings_title">Settings</string>

    <string name="signup_facebook">Sign Up with Facebook</string>
    <string name="signup_google">Sign Up with Google</string>
    <string name="signup_server">Sign Up</string>
    <string name="signup_twitter">Sign Up with Twitter</string>
    <string name="signup_title">Sign Up</string>

    <string name="sso_hint">OR</string>

    <string name="thingdetails_title">THING Details</string>

    <string name="things_accessibility">\'%1$s\' THING icon</string>
    <string name="things_title">THINGS</string>
    <string name="things_type">Type</string>

    <string name="toolbox_title">Toolbox</string>

    <string name="welcome_title">Welcome to RIDE</string>
</resources>
